snapshot_tests/operations/errors/fragmentSpreadMissing.re
[%graphql
  {|
  query MyQuery {
    lists {
      ...MissingFragment
    }
  }
  |}
];
